Table auth.users {
  id uuid [pk]
}

Table profiles {
  id uuid [pk, ref: - auth.users.id]
  email varchar(255) [unique, not null]
  full_name varchar(255)
  phone varchar(50)
  role enum('student', 'teacher', 'admin') [default: `'student'`]
  billing_address text
  created_at timestamptz [default: `now()`]
}

Table courses {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(255) [not null]
  course_number varchar(50) [unique]
  description text
  duration_days int
  type enum('classroom', 'online') [not null]
  price decimal(10,2) [default: 0]
  image_url text
  average_rating decimal(3,2) [default: 0]
  rating_count int [default: 0]
  created_at timestamptz [default: `now()`]
}

Table course_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  course_id uuid [ref: > courses.id, not null]
  start_date date [not null]
  end_date date
  location varchar(255)
  teacher_id uuid [ref: > profiles.id]
  min_participants int [default: 5]
  status enum('planned', 'active', 'cancelled', 'completed') [default: `'planned'`]
  cancellation_reason text
  cancelled_at timestamptz
  created_at timestamptz [default: `now()`]
}

Table enrollments {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > profiles.id, not null]
  course_session_id uuid [ref: > course_sessions.id]
  course_id uuid [ref: > courses.id]
  enrolled_at timestamptz [default: `now()`]
  status enum('confirmed', 'pending', 'cancelled', 'attended') [default: `'pending'`]
  payment_status enum('pending', 'paid', 'refunded') [default: `'pending'`]
  is_subscription boolean [default: false]
}

Table purchases {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > profiles.id, not null]
  course_id uuid [ref: > courses.id]
  purchased_at timestamptz [default: `now()`]
  price_paid decimal(10,2)
  is_subscription boolean [default: false]
  subscription_start timestamptz
  subscription_end timestamptz
}

Table course_questions {
  id uuid [pk, default: `gen_random_uuid()`]
  course_id uuid [ref: > courses.id, not null]
  user_id uuid [ref: > profiles.id, not null]
  question_text text [not null]
  answer_text text
  answered_by uuid [ref: > profiles.id]
  created_at timestamptz [default: `now()`]
  answered_at timestamptz
}

Table course_reviews {
  id uuid [pk, default: `gen_random_uuid()`]
  course_id uuid [ref: > courses.id, not null]
  user_id uuid [ref: > profiles.id, not null]
  rating int [note: '1-5']
  review_text text
  created_at timestamptz [default: `now()`]
}

Table subscriptions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > profiles.id, not null]
  start_date date [not null]
  end_date date
  status enum('active', 'cancelled', 'expired') [default: `'active'`]
  created_at timestamptz [default: `now()`]
}
